src/snapshots/tests__combine_weekend.snap
---
created: "2019-08-31T23:26:51.551620Z"
creator: insta@0.10.1
source: src/combine.rs
expression: what
---
[
    Interval {
        from: 2019-01-05T00:00:00Z,
        to: Some(
            2019-01-05T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-06T00:00:00Z,
        to: Some(
            2019-01-06T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-12T00:00:00Z,
        to: Some(
            2019-01-12T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-13T00:00:00Z,
        to: Some(
            2019-01-13T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-19T00:00:00Z,
        to: Some(
            2019-01-19T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-20T00:00:00Z,
        to: Some(
            2019-01-20T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-26T00:00:00Z,
        to: Some(
            2019-01-26T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-27T00:00:00Z,
        to: Some(
            2019-01-27T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-02T00:00:00Z,
        to: Some(
            2019-02-02T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-03T00:00:00Z,
        to: Some(
            2019-02-03T23:59:59.999999999Z,
        ),
    },
]
