src/snapshots/tests__every.snap
---
created: "2019-08-31T23:26:51.551581Z"
creator: insta@0.10.1
source: src/schedule.rs
expression: what
---
[
    Interval {
        from: 2019-01-01T00:00:00Z,
        to: Some(
            2019-01-01T00:10:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T00:10:00Z,
        to: Some(
            2019-01-01T00:20:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T00:20:00Z,
        to: Some(
            2019-01-01T00:30:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T00:30:00Z,
        to: Some(
            2019-01-01T00:40:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T00:40:00Z,
        to: Some(
            2019-01-01T00:50:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T00:50:00Z,
        to: Some(
            2019-01-01T01:00:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T02:00:00Z,
        to: Some(
            2019-01-01T02:10:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T02:10:00Z,
        to: Some(
            2019-01-01T02:20:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T02:20:00Z,
        to: Some(
            2019-01-01T02:30:00Z,
        ),
    },
    Interval {
        from: 2019-01-01T02:30:00Z,
        to: Some(
            2019-01-01T02:40:00Z,
        ),
    },
]
