src/snapshots/tests__every_10_am.snap
---
created: "2019-09-05T05:08:22.943165Z"
creator: insta@0.10.1
source: src/time.rs
expression: "am_10.iter_within(Interval::from(\"2019-10-31T12:00:00Z\".parse().unwrap())).take(10).collect::<Vec<_>>()"
---
[
    Interval {
        from: 2019-11-01T10:00:00Z,
        to: Some(
            2019-11-01T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-02T10:00:00Z,
        to: Some(
            2019-11-02T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-03T10:00:00Z,
        to: Some(
            2019-11-03T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-04T10:00:00Z,
        to: Some(
            2019-11-04T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-05T10:00:00Z,
        to: Some(
            2019-11-05T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-06T10:00:00Z,
        to: Some(
            2019-11-06T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-07T10:00:00Z,
        to: Some(
            2019-11-07T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-08T10:00:00Z,
        to: Some(
            2019-11-08T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-09T10:00:00Z,
        to: Some(
            2019-11-09T10:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-10T10:00:00Z,
        to: Some(
            2019-11-10T10:00:00Z,
        ),
    },
]
