src/snapshots/tests__every_month.snap
---
created: "2019-08-31T23:26:51.551540Z"
creator: insta@0.10.1
source: src/period.rs
expression: "every_month.iter_within(Interval::from(\"2019-10-31T12:00:00Z\".parse().unwrap())).take(10).collect::<Vec<_>>()"
---
[
    Interval {
        from: 2019-10-31T12:00:00Z,
        to: Some(
            2019-11-30T12:00:00Z,
        ),
    },
    Interval {
        from: 2019-11-30T12:00:00Z,
        to: Some(
            2019-12-31T12:00:00Z,
        ),
    },
    Interval {
        from: 2019-12-31T12:00:00Z,
        to: Some(
            2020-01-31T12:00:00Z,
        ),
    },
    Interval {
        from: 2020-01-31T12:00:00Z,
        to: Some(
            2020-02-29T12:00:00Z,
        ),
    },
    Interval {
        from: 2020-02-29T12:00:00Z,
        to: Some(
            2020-03-31T12:00:00Z,
        ),
    },
    Interval {
        from: 2020-03-31T12:00:00Z,
        to: Some(
            2020-04-30T12:00:00Z,
        ),
    },
    Interval {
        from: 2020-04-30T12:00:00Z,
        to: Some(
            2020-05-31T12:00:00Z,
        ),
    },
    Interval {
        from: 2020-05-31T12:00:00Z,
        to: Some(
            2020-06-30T12:00:00Z,
        ),
    },
    Interval {
        from: 2020-06-30T12:00:00Z,
        to: Some(
            2020-07-31T12:00:00Z,
        ),
    },
    Interval {
        from: 2020-07-31T12:00:00Z,
        to: Some(
            2020-08-31T12:00:00Z,
        ),
    },
]
