src/snapshots/tests__every_sunday.snap
---
created: "2019-08-31T23:26:51.551600Z"
creator: insta@0.10.1
source: src/weekday.rs
expression: what
---
[
    Interval {
        from: 2019-01-06T00:00:00Z,
        to: Some(
            2019-01-06T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-13T00:00:00Z,
        to: Some(
            2019-01-13T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-20T00:00:00Z,
        to: Some(
            2019-01-20T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-27T00:00:00Z,
        to: Some(
            2019-01-27T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-03T00:00:00Z,
        to: Some(
            2019-02-03T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-10T00:00:00Z,
        to: Some(
            2019-02-10T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-17T00:00:00Z,
        to: Some(
            2019-02-17T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-24T00:00:00Z,
        to: Some(
            2019-02-24T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-03-03T00:00:00Z,
        to: Some(
            2019-03-03T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-03-10T00:00:00Z,
        to: Some(
            2019-03-10T23:59:59.999999999Z,
        ),
    },
]
