src/snapshots/tests__merge_weekend.snap
---
created: "2019-08-31T23:26:51.551661Z"
creator: insta@0.10.1
source: src/merge.rs
expression: what
---
[
    Interval {
        from: 2019-01-05T00:00:00Z,
        to: Some(
            2019-01-06T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-12T00:00:00Z,
        to: Some(
            2019-01-13T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-19T00:00:00Z,
        to: Some(
            2019-01-20T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-01-26T00:00:00Z,
        to: Some(
            2019-01-27T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-02T00:00:00Z,
        to: Some(
            2019-02-03T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-09T00:00:00Z,
        to: Some(
            2019-02-10T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-16T00:00:00Z,
        to: Some(
            2019-02-17T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-02-23T00:00:00Z,
        to: Some(
            2019-02-24T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-03-02T00:00:00Z,
        to: Some(
            2019-03-03T23:59:59.999999999Z,
        ),
    },
    Interval {
        from: 2019-03-09T00:00:00Z,
        to: Some(
            2019-03-10T23:59:59.999999999Z,
        ),
    },
]
